--- a/src/app/studentdetails/studentdetails.component.html
+++ b/src/app/studentdetails/studentdetails.component.html
@@ -75,7 +75,7 @@
               <ng-container matColumnDef='action'>
                 <th mat-header-cell *matHeaderCellDef> Edit </th>
                 <td mat-cell *matCellDef="let row">
-                  <button mat-icon-button color="warn" [routerLink]="['/edit/'+row.id]"> <mat-icon>edit</mat-icon> </button>
+                  <button mat-icon-button color="warn" (click)="open(row)"> <mat-icon>edit</mat-icon> </button>
                 </td>
               </ng-container >
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
