--- a/src/app/studentdetails/studentdetails.component.html
+++ b/src/app/studentdetails/studentdetails.component.html
@@ -18,7 +18,7 @@
             <br>
             <mat-form-field>
             <mat-label>Age</mat-label>
-             <input type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' matInput placeholder="Age" formControlName="age" name="age" > 
+             <input type="text" appHighlight matInput placeholder="Age" formControlName="age" name="age" > 
              </mat-form-field>
                <br>
             <mat-form-field>
