--- a/src/app/studentdetails/studentdetails.component.html
+++ b/src/app/studentdetails/studentdetails.component.html
@@ -76,6 +76,7 @@
                 <th mat-header-cell *matHeaderCellDef> Edit </th>
                 <td mat-cell *matCellDef="let row">
                   <button mat-icon-button color="warn" (click)="open(row)"> <mat-icon>edit</mat-icon> </button>
+                  <button mat-icon-button color="warn" (click)="create()"> <mat-icon>open_in_new</mat-icon> </button>
                 </td>
               </ng-container >
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
