--- a/src/app/studentdetails/studentdetails.component.html
+++ b/src/app/studentdetails/studentdetails.component.html
@@ -10,16 +10,25 @@
                 <mat-label>First Name</mat-label>
                  <input type="text"  matInput placeholder="First Name" formControlName="firstname" name="firstname">
             </mat-form-field>
+            <p class="alert alert-danger" *ngIf="condition && student.get('firstname')?.hasError('required')">
+              fill they form required
+          </p>
             <br>
             <mat-form-field>
             <mat-label>Last Name</mat-label>
             <input type="text"  matInput placeholder="Last Name" formControlName="lastname" name="lastname" >
             </mat-form-field>
+            <p class="alert alert-danger" *ngIf="condition && student.get('lastname')?.hasError('required')">
+              fill they form required
+          </p>
             <br>
             <mat-form-field>
             <mat-label>Age</mat-label>
              <input type="text" appHighlight matInput placeholder="Age" formControlName="age" name="age" > 
              </mat-form-field>
+             <p class="alert alert-danger" *ngIf="condition && student.get('age')?.hasError('required')">
+              fill they form required
+            </p>
                <br>
             <mat-form-field>
             <mat-label>Subject</mat-label>
@@ -35,7 +44,7 @@
                     <mat-label>Phone</mat-label>
                  <input type="text"  matInput placeholder="Phone" formControlName="phone" name="phone" >
                </mat-form-field>
-               <p class="alert alert-danger" *ngIf="condition && student.invalid">
+               <p class="alert alert-danger" *ngIf="condition && student.get('phone')?.hasError('required')">
                 fill they form required
             </p>
              <br>
