--- a/src/app/teacher/list/list.component.html
+++ b/src/app/teacher/list/list.component.html
@@ -22,6 +22,7 @@
                   <th mat-header-cell *matHeaderCellDef> Edit </th>
                   <td mat-cell *matCellDef="let row">
                     <button mat-icon-button color="warn" [routerLink]="['/edit/'+ row.id]"> <mat-icon>edit</mat-icon> </button>
+                    <button mat-icon-button color="warn" [routerLink]="['/teacher/add']"><mat-icon>saved</mat-icon></button>
                   </td>
                 </ng-container >
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
