--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -7,7 +7,7 @@
                     <a href="/student" class="nav-link">Student</a>
                 </li>
                 <li class="nav-item ">
-                    <a href="/teacher/add" class="nav-link">Teacher</a>
+                    <a href="/list" class="nav-link">Teacher</a>
                 </li>
                 <li class="nav-item">
                     <button mat-raised-button color="warn" [routerLink]="['/login']" type="submit" (click)="logout()">logout</button>
