--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -4,7 +4,7 @@
         <div class="collapse navbar-collapse " id="mynavbar">
             <ul class="nav navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a href="/student" class="nav-link">Student</a>
+                    <a href="/student/list" class="nav-link">Student</a>
                 </li>
                 <li class="nav-item ">
                     <a href="/list" class="nav-link">Teacher</a>
@@ -16,3 +16,12 @@
         </div>
     </div>
 </nav>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                
+            </div>
+        </div>
+    </div>
+</body>
