--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -7,12 +7,12 @@
                     <a href="/student/list" class="nav-link">Student</a>
                 </li>
                 <li class="nav-item ">
-                    <a href="/list" class="nav-link">Teacher</a>
-                </li>
-                <li class="nav-item">
-                    <button mat-raised-button color="warn" [routerLink]="['/login']" type="submit" (click)="logout()">logout</button>
+                    <a href="/teacher/list" class="nav-link">Teacher</a>
                 </li>
             </ul>
+            <div class=" my-2 my-lg-0">
+                <button mat-raised-button color="warn" class=" my-2 my-sm-0" [routerLink]="['/login']" type="submit" (click)="logout()">logout</button>
+            </div>
         </div>
     </div>
 </nav>
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                
+                <router-outlet></router-outlet>
             </div>
         </div>
     </div>
