--- a/src/app/student/student-list.component.html
+++ b/src/app/student/student-list.component.html
@@ -1,7 +1,14 @@
 <div class="container">
     <div class="row">
-      <div class="col-12-lg "> 
-        <div class="col-12-lg">
+      <div class="col-lg-6">
+        <h3>Student Record</h3>
+      </div>
+      <div class="col-lg-6">
+        <div class="d-flex flex-row-reverse">
+          <button mat-raised-button color="primary" (click)="create()">Create</button>
+        </div>
+      </div>
+      <div class="col-lg-12 "> 
           <table mat-table [dataSource]="dataSource">
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef> Id </th>
@@ -35,13 +42,11 @@
                 <th mat-header-cell *matHeaderCellDef> Edit </th>
                 <td mat-cell *matCellDef="let row">
                   <button mat-icon-button color="warn" (click)="open(row)"> <mat-icon>edit</mat-icon> </button>
-                  <button mat-icon-button color="warn" (click)="create()"> <mat-icon>open_in_new</mat-icon> </button>
                 </td>
               </ng-container >
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        </div>
       </div>
     </div>
   </div>
