--- a/src/app/teacher/teacher-list.component.html
+++ b/src/app/teacher/teacher-list.component.html
@@ -1,34 +1,41 @@
 <div class="container">
     <div class="row">
-        <div class="col-12-lg">
-            <table mat-table [dataSource]="dataSource">
-              <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> Id </th>
-                <td mat-cell *matCellDef="let element">{{element.id}}</td>
-              </ng-container>
-              <ng-container matColumnDef="firstname">
-                <th mat-header-cell *matHeaderCellDef> FirstName </th>
-                <td mat-cell *matCellDef="let element">{{element.firstname}}</td>
-              </ng-container>
-              <ng-container matColumnDef="lastname">
-                  <th mat-header-cell *matHeaderCellDef> LastName </th>
-                  <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
-                </ng-container>
-                <ng-container matColumnDef="class">
-                  <th mat-header-cell *matHeaderCellDef> Class </th>
-                  <td mat-cell *matCellDef="let element"> {{element.class}} </td>
-                </ng-container>
-                <ng-container matColumnDef='action'>
-                  <th mat-header-cell *matHeaderCellDef> Edit </th>
-                  <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="warn" [routerLink]="['/edit/'+ row.id]"> <mat-icon>edit</mat-icon> </button>
-                    <button mat-icon-button color="warn" [routerLink]="['/teacher/add']"><mat-icon>saved</mat-icon></button>
-                  </td>
-                </ng-container >
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
+        <div class="col-lg-6">
+          <h3>Teacher Record</h3>
+        </div>
+        <div class="col-lg-6">
+          <div class="d-flex flex-row-reverse">
+            <button mat-raised-button color="primary" [routerLink]="['/teacher/add']">Created</button>
           </div>
+        </div>
+        <div class="col-12-lg">
+          <table mat-table [dataSource]="dataSource">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> Id </th>
+              <td mat-cell *matCellDef="let element">{{element.id}}</td>
+            </ng-container>
+            <ng-container matColumnDef="firstname">
+              <th mat-header-cell *matHeaderCellDef> FirstName </th>
+              <td mat-cell *matCellDef="let element">{{element.firstname}}</td>
+            </ng-container>
+            <ng-container matColumnDef="lastname">
+                <th mat-header-cell *matHeaderCellDef> LastName </th>
+                <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+              </ng-container>
+              <ng-container matColumnDef="class">
+                <th mat-header-cell *matHeaderCellDef> Class </th>
+                <td mat-cell *matCellDef="let element"> {{element.class}} </td>
+              </ng-container>
+              <ng-container matColumnDef='action'>
+                <th mat-header-cell *matHeaderCellDef> Edit </th>
+                <td mat-cell *matCellDef="let row">
+                  <button mat-icon-button color="warn" [routerLink]="['/teacher/edit/'+ row.id]"> <mat-icon>edit</mat-icon> </button>
+                </td>
+              </ng-container >
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        </div>
     </div>
 </div>
     
