--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -9,6 +9,9 @@
                 <li class="nav-item ">
                     <a href="/teacher/list" class="nav-link">Teacher</a>
                 </li>
+                <li class="nav-item ">
+                    <a href="/class/list" class="nav-link">class</a>
+                </li>
             </ul>
             <div class=" my-2 my-lg-0">
                 <button mat-raised-button color="warn" class=" my-2 my-sm-0" [routerLink]="['/login']" type="submit" (click)="logout()">logout</button>
