--- a/src/app/class/class-add/class-add.component.html
+++ b/src/app/class/class-add/class-add.component.html
@@ -1,23 +1,17 @@
-<div class="container">
-    <div class="row">
-      <div class="col-12-lg ">
-        <div class="my-5">
-          <div class="text-center">
-            <div class="py-5" >
-              <h2 class="text-dark">Class Details Add</h2>
-             <form [formGroup]="classadd" (ngSubmit)="onSaved()">
-              <mat-form-field>
-                <mat-label>First Name</mat-label>
-                 <input type="text"  matInput placeholder="Class Value" formControlName="value" name="value">
-            </mat-form-field>
-            <p class="alert alert-danger" *ngIf="condition && classadd.get('value')?.hasError('required')">
-              fill they form required
-          </p>
-            <button mat-raised-button color="primary" type="submit">ADD Class</button>
-             </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+<form [formGroup]="classadd" (ngSubmit)="onSaved()">
+  <div mat-dialog-title>
+    <h1 > Class ADD</h1>
+   </div>
+  <div mat-dialog-content>
+  <mat-form-field>
+    <mat-label>First Name</mat-label>
+     <input type="text"  matInput placeholder="Class Value" formControlName="value" name="value">
+</mat-form-field>
+<p class="alert alert-danger" *ngIf="condition && classadd.get('value')?.hasError('required')">
+  fill they form required
+</p>
 </div>
+<div mat-dialog-action>
+  <button mat-raised-button mat-dialog-close color="primary" type="submit">ADD Class</button>
+</div>
+ </form>
