--- a/src/app/class/class-list.component.html
+++ b/src/app/class/class-list.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-lg-6">
           <div class="d-flex flex-row-reverse">
-            <button mat-raised-button color="primary" [routerLink]="['/class/add']">Created</button>
+            <button mat-raised-button color="primary" (click)="open()">Created</button>
           </div>
         </div>
         <div class="col-12-lg">
