--- a/src/app/class/class-add/class-add.component.html
+++ b/src/app/class/class-add/class-add.component.html
@@ -13,5 +13,6 @@
 </div>
 <div mat-dialog-action>
   <button mat-raised-button mat-dialog-close color="primary" type="submit">ADD Class</button>
+  <button mat-button mat-dialog-close class="btn btn-outline-danger">close</button>
 </div>
  </form>
