--- a/src/app/student/student-list.component.html
+++ b/src/app/student/student-list.component.html
@@ -8,7 +8,7 @@
           <button mat-raised-button color="primary" (click)="create()">Create</button>
         </div>
       </div>
-      <div class="col-lg-12 "> 
+      <div class="col-lg-12"> 
           <table mat-table [dataSource]="dataSource">
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef> Id </th>
@@ -47,6 +47,15 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
+      </div>
+      <div class="col-lg-12">
+        <mat-paginator #paginator
+        [length]="length"
+        [pageIndex]="pageIndex"
+        [pageSize]="pageSize"
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        (page)="getServerData($event)"
+></mat-paginator>
       </div>
     </div>
   </div>
