--- a/src/app/student/student-list.component.html
+++ b/src/app/student/student-list.component.html
@@ -10,6 +10,10 @@
       </div>
       <div class="col-lg-12"> 
           <table mat-table [dataSource]="dataSource">
+            <ng-container matColumnDef="index">
+              <th mat-header-cell *matHeaderCellDef> Index </th>
+              <td mat-cell *matCellDef="let element; let i = index;">{{(pageIndex * pageSize) + (i + 1)}}</td>
+            </ng-container>
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef> Id </th>
               <td mat-cell *matCellDef="let element">{{element.id}}</td>
