--- a/src/app/student/student-list.component.html
+++ b/src/app/student/student-list.component.html
@@ -11,7 +11,7 @@
       <div class="col-lg-12"> 
           <table mat-table [dataSource]="dataSource">
             <ng-container matColumnDef="index">
-              <th mat-header-cell *matHeaderCellDef> Index </th>
+              <th mat-header-cell *matHeaderCellDef> S.No </th>
               <td mat-cell *matCellDef="let element; let i = index;">{{(pageIndex * pageSize) + (i + 1)}}</td>
             </ng-container>
             <ng-container matColumnDef="id">
