--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -25,7 +25,7 @@
                 <button mat-raised-button color="warn" class=" my-2 my-sm-0" [routerLink]="['/login']" type="submit" (click)="logout()">logout</button>
             </div>
             <div class="my-2 my-lg-0 mx-2">
-                <h3 class=" my-2 my-sm-0">Login:{{loginservice.loginName.id}} <br> Phone:{{loginservice.loginName.phone}}</h3>
+                <h3 class=" my-2 my-sm-0">Login:{{loginName.id}} <br> Phone:{{loginName.phone}}</h3>
             </div>
         </div>
     </div>
