--- a/src/app/student/student-list.component.html
+++ b/src/app/student/student-list.component.html
@@ -34,6 +34,10 @@
                 <th mat-header-cell *matHeaderCellDef> Age </th>
                 <td mat-cell *matCellDef="let element"> {{element.age}} </td>
               </ng-container>
+              <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef> DateofBirth </th>
+                <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+              </ng-container>
               <ng-container matColumnDef="class">
                 <th mat-header-cell *matHeaderCellDef> Class </th>
                 <td mat-cell *matCellDef="let element"> {{element.class}} </td>
