--- a/src/app/student/student-pop/student-pop.component.html
+++ b/src/app/student/student-pop/student-pop.component.html
@@ -29,6 +29,15 @@
         fill they form required
       </p>
    </div>
+   <div mat-dialog-content>
+    <mat-form-field>
+      <mat-label>Choose a date</mat-label>
+      <input matInput formControlName="date" [matDatepicker]="picker">
+      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker> 
+       </mat-form-field>
+   </div>
     <div mat-dialog-content>
       <mat-form-field>
         <mat-label>Subject</mat-label>
