--- a/src/app/class/class-list.component.html
+++ b/src/app/class/class-list.component.html
@@ -9,18 +9,16 @@
           </div>
         </div>
         <div class="col-12-lg">
-          <table mat-table [dataSource]="dataSource">
-            <ng-container matColumnDef="value">
-              <th mat-header-cell *matHeaderCellDef> ClassValue </th>
-              <td mat-cell *matCellDef="let element">{{element.value}}</td>
-            </ng-container>
-            <ng-container matColumnDef="viewValue">
-              <th mat-header-cell *matHeaderCellDef> ClassView </th>
-              <td mat-cell *matCellDef="let element">{{element.viewValue}}</td>
-            </ng-container>
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+         <table>
+          <thead>
+            <th>Value</th>
+            <th>ViewValue</th>
+          </thead>
+          <tbody *ngFor="let vale of dataSource">
+            <td>{{vale.value}}</td>
+            <td>{{vale.viewValue}}</td>
+          </tbody>
+         </table>
         <app-student-list [myinputMsg]="myInputMessage"></app-student-list>
         </div>
     </div>
