--- a/src/app/class/class-list.component.html
+++ b/src/app/class/class-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-6">
-          <h3>Teacher Record</h3>
+          <h3>Class Record</h3>
         </div>
         <div class="col-lg-6">
           <div class="d-flex flex-row-reverse">
