--- a/src/app/class/class-list.component.html
+++ b/src/app/class/class-list.component.html
@@ -24,7 +24,7 @@
                 <td>{{vale.viewValue}}</td>
               </tr>
               <tr>
-                <td><app-student-list [myinputMsg]="vale.id"></app-student-list></td>
+                <td><app-student-list [myinputMsg]="vale.class_id"></app-student-list></td>
               </tr>
             </ng-container>
             <tr>
