--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -18,6 +18,7 @@
                     <button mat-menu-item [routerLink]="['/student/list']">Student</button>
                     <button mat-menu-item [routerLink]="['/teacher/list']">Teacher</button>
                     <button mat-menu-item [routerLink]="['/class/list']">Class</button>
+                    <button mat-menu-item [routerLink]="['/subject/list']">Subject</button>
                     </mat-menu>
                 </li>
             </ul>
