--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -6,15 +6,24 @@
             <div class="py-5" >
               <h2 class="text-dark">UserLogin</h2>
              <form [formGroup]="login" (ngSubmit)="userLogin()" *ngIf="condition">
-              <mat-form-field>
-                <mat-label>username</mat-label>
-                 <input type="text"  matInput placeholder="Enter Phone Number" formControlName="phone" name="Phonenumber">
+              <mat-form-field class="new">
+                <mat-label>Ph</mat-label>
+                <select matNativeControl required>
+                  <option value="+91">+91</option>
+                  <option value="+248">+248</option>
+                  <option value="+78">+78</option>
+                  <option value="+20">+20</option>
+                </select>
+              </mat-form-field>
+              <mat-form-field >
+                <mat-label>Phonenumber</mat-label>
+                 <input type="text" appHighlight matInput placeholder="Enter Phone Number" formControlName="phone" name="Phonenumber">
                   </mat-form-field>
                   <p class="alert alert-danger" *ngIf="minlength && this.login.get('phone')?.hasError('minlength')">
                     Your phone must be at least 10 characters long.
                 </p>
                   <br>
-                    <mat-form-field>
+                    <mat-form-field class="select">
                     <mat-label>password</mat-label>
                       <input type="text" matInput placeholder="password" formControlName="pass" name="password" >
                       </mat-form-field>
