--- a/src/app/teacher/teacher-list.component.html
+++ b/src/app/teacher/teacher-list.component.html
@@ -22,6 +22,10 @@
                 <th mat-header-cell *matHeaderCellDef> LastName </th>
                 <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
               </ng-container>
+              <ng-container matColumnDef="gender">
+                <th mat-header-cell *matHeaderCellDef> gender </th>
+                <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+              </ng-container>
               <ng-container matColumnDef="class">
                 <th mat-header-cell *matHeaderCellDef> Class </th>
                 <td mat-cell *matCellDef="let element"> {{element.class}} </td>
