--- a/src/app/student/student-list.component.html
+++ b/src/app/student/student-list.component.html
@@ -40,11 +40,7 @@
               </ng-container>
               <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef> DateofBirth </th>
-                <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-              </ng-container>
-              <ng-container matColumnDef="class">
-                <th mat-header-cell *matHeaderCellDef> Class </th>
-                <td mat-cell *matCellDef="let element"> {{element.class}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.date | date: 'dd-MM-yyyy'}} </td>
               </ng-container>
               <ng-container matColumnDef="phone">
                 <th mat-header-cell *matHeaderCellDef> Phone </th>
