--- a/src/app/student/student-list.component.html
+++ b/src/app/student/student-list.component.html
@@ -44,7 +44,7 @@
               </ng-container>
               <ng-container matColumnDef="phone">
                 <th mat-header-cell *matHeaderCellDef> Phone </th>
-                <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.num+"-"+element.phone}} </td>
               </ng-container>
               <ng-container matColumnDef='action'>
                 <th mat-header-cell *matHeaderCellDef> Edit </th>
